feat: added new config for swagger in versel
